# amongus

./: README.md  game-spec.md
backend/: main.py  pyproject.toml
backend/app/: __init__.py  game.py  llm.py  main.py  models.py  prompts.py  sandbox.py  tasks.py
frontend/: package-lock.json
frontend/src/: App.tsx  index.css
frontend/src/components/: CodeViewer.tsx  DiscussionPanel.tsx  GameBoard.tsx  GameOverModal.tsx  Header.tsx  Lobby.tsx  PlayerCard.tsx  TaskProgress.tsx  TestResults.tsx  VotingPanel.tsx
frontend/src/hooks/: useGameState.ts
frontend/src/types/: game.ts
